# ic-design-knowledge-graph

./: .gitignore  .gitmodules  CURSOR_HANDOFF.md  GRAPHRAG_STATUS.md  HARDENING_AND_VERIFICATION.md  README.md  business-requirements.md  business-requirements.txt  conftest.py  env.template  pyproject.toml  pytest.ini  requirements-core.txt  requirements-graphrag.txt  requirements.txt  run_ic_analysis.py  validate_integration.py  validate_quality.py
data/: db_collection_stats.csv  ingestion_log.jsonl
docs/: CUSTOMER_EXERCISE_WORKFLOW.md  DEMO_EXECUTIVE_SUMMARY.md  DEMO_README.md  DEMO_SCRIPT.md  DEMO_SETUP_QUERIES.json  ER_LIBRARY_CONTRIBUTION_PLAN.md  PRESENTATION_QA_GUIDE.md  README.md  TECHNICAL_PRESENTATION.md  TEMPORAL_DEMO_SCRIPT.md  arangodb-cluster-sharding.md  deep-traversal-queries.md  hardware_design_theme.json  temporal-queries.md
scripts/: README.md  customer_workflow.py  diagnose_graphrag.py  list_bridging_examples.py  local_er_mcp.sh  master_etl.py  migrate_collections.py  rebuild_database.sh  smoke_test.py  validate_er_migration.py
src/: audit_all_edges.py  audit_collections.py  audit_edges.py  bridger.py  bridger_bulk.py  bridger_shared.py  config.py  config_temporal.py  consolidator.py  create_graph.py  cross_repo_bridge.py  db_stats.py  db_utils.py  demo_query.py  demo_temporal_query.py  document_converter.py  etl_always.py  etl_assertions.py  etl_assigns.py  etl_authors.py  etl_bus.py  etl_calls.py  etl_clocks.py  etl_epoch_detector.py  etl_fsm.py  etl_functions.py  etl_generate.py  etl_git.py  etl_graphrag.py  etl_memory_access.py  etl_rtl.py  (+22 more)
(+76 files in other folders)
